# Deep-Research

./: .gitignore  README.md  index.html  launch.sh  package-lock.json  package.json  session-ses_1543.md  setup.sh  tailwind.config.ts
backend/: config.py  main.py  output_formatter.py  rag_memory.py  requirements.txt  research_engine.py
backend/tests/: test_output_formatter.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs  settings.rs
src-tauri/src/commands/: mod.rs  reports.rs  research.rs  settings.rs
src/components/history/: HistoryList.tsx  HistorySearch.tsx  ReportCard.tsx
src/components/layout/: Sidebar.tsx
src/components/research/: LogPanel.tsx  ProgressPanel.tsx  ReportViewer.tsx  ResearchForm.tsx  StageNode.tsx
src/components/settings/: ModelSelector.tsx  ProviderConfig.tsx  SettingsPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  searchable-select.tsx  select.tsx  separator.tsx
src/hooks/: useResearch.ts  useTheme.ts
src/lib/: api.ts  reportUtils.ts  types.ts
src/stores/: settings.ts  useHistory.ts
src/styles/: globals.css
