[package]
name = "deep-research"
version = "0.1.0"
description = "Deep Research - Autonomous web research desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "deep_research_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
open = "5"
